--- a/index.html
+++ b/index.html
@@ -35,24 +35,24 @@
 </main>
 <aside>
 <h2> Contact Us Today!</h2>
-<ul>
-<li> Contact Name- Steve Schram, Owner</li>
-<li> thequalitydrycleaners@gmail.com
+<p>Contact Name- Steve Schram, Owner</p>
+  <p> thequalitydrycleaners@gmail.com</p>
+  <ul>
 <li> Kettering <br>1855 E. Stroop Rd.
 Kettering, OH 45429-5056
-937-299-2099</li>
+<br>937-299-2099</li>
 <li>Bellbrook  <br>112 W. Franklin St.
 Bellbrook, OH 45305
-937-848-0054</li>
+<br>937-848-0054</li>
 <li>Centerville<br>15 W. Whipp Rd.
 Centerville, OH 45459
-937-434-3553</li>
+<br>937-434-3553</li>
 <li>Beavercreek<br>1285 N Fairfield Rd.
 Beavercreek, OH 45432
-937-203-0581</li>
+<br>937-203-0581</li>
 <li>Oakwood/Dayton<br>964 Patterson Rd.
 Dayton, OH 45419
-937-299-2071</li>
+<br>937-299-2071</li>
 </ul>
 <br>
 <h2> Business Hours:</h2>
