--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <h3> Pick Up and Delivery Service Available </h3>
     <h3> (937)848-0054 <h3>
     <h3> Follow Us On Facebook!</h3>
-    <p>Kettering - (937)299-2099</p>
-    <p>Bellbrook - (937)848-0054</p>
-    <p>Centerville - (937)434-3553</p>
-    <p>Beavercreek - (937)203-0581</p>
-    <p>Oakwood/Dayton - (937)299-2071</p>
+    <p>Kettering - (937) 299-2099</p>
+    <p>Bellbrook - (937) 848-0054</p>
+    <p>Centerville - (937) 434-3553</p>
+    <p>Beavercreek - (937) 203-0581</p>
+    <p>Oakwood/Dayton - (937) 299-2071</p>
     </header>
      <nav id="flex-nav">
 <a href="#" class="toggleNav">&#9776; Menu</a>
@@ -56,13 +56,12 @@ Dayton, OH 45419
 </ul>
 <br>
 <h2> Business Hours:</h2>
-<ul>
-<li>Kettering Location Only
-Monday - Friday: 7:00am to 7:00pm
-Saturday: 9:00am to 3:00pm</li>
-<li>All Other Locations
-Monday - Friday: 7:30am to 7:00pm
-Saturday: 9:00am to 3:00pm</li>
+  <p>Kettering Location Only</p>
+<p>Monday - Friday: 7:00am to 7:00pm
+Saturday: 9:00am to 3:00pm</p>
+  <p>All Other Locations</p>
+<p>Monday - Friday: 7:30am to 7:00pm
+Saturday: 9:00am to 3:00pm</p>
 </aside>
 <footer>
 <p> @copy;2019</p>
