--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header> 
     <h1>Quality Dry Cleaners</h1>
     <h3> Pick Up and Delivery Service Available </h3>
-    <h3> (937)848-0054 <h3>
+    <h3> (937) 848-0054 <h3>
     <h3> Follow Us On Facebook!</h3>
     <p>Kettering - (937) 299-2099</p>
     <p>Bellbrook - (937) 848-0054</p>
@@ -30,8 +30,8 @@
 </nav>
 <main>
 <h3> Same Day Service Available! </h2>
-<h2> We have 5 convenient locations to accomodate all your dry cleaning and laundry needs </h2>
-<h2> Whether it's your wedding dress or a shirt, Quality Dry Cleaners has you covered!</h2>
+<h2> We have 5 convenient locations to accomodate all your dry cleaning and laundry needs.
+  Whether it's your wedding dress or a shirt, Quality Dry Cleaners has you covered!</h2>
 </main>
 <aside>
 <h2> Contact Us Today!</h2>
