--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <h1>Quality Dry Cleaners</h1>
     <h3> Pick Up and Delivery Service Available </h3>
     <h3> Follow Us On Facebook!</h3>
-      <img class="facebook" src="facebook.jpg" alt="facebook logo">
+     <a href="https://www.facebook.com/pages/Quality-Dry-Cleaners/148179245225495"> <img src="facebook.jpg" 
+     alt="facebook logo"></a>
       <ul>
     <li>Kettering - (937) 299-2099</li>
     <li>Bellbrook - (937) 848-0054</li>
