--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>Quality Dry Cleaners</h1>
     <h3> Pick Up and Delivery Service Available </h3>
     <h3> Follow Us On Facebook!</h3>
-    <img src="facebook.jpg" 
+    <img src="fblogo.jif" 
      alt="facebook logo">
       <ul>
     <li>Kettering - (937) 299-2099</li>
