--- a/index.html
+++ b/index.html
@@ -11,16 +11,12 @@
     <header> 
     <h1>Quality Dry Cleaners</h1>
     <h3> Pick Up and Delivery Service Available </h3>
-    <h3> Follow Us On Facebook!</h3>
+      <figure class="fig1">
+			    <img src="facebook.jpg" alt="Facebook Logo">
+			    <figcaption>Follow Us On Facebook!</figcaption>
+			</figure>
     <img src="facebook.jpg" 
      alt="facebook logo">
-      <ul>
-    <li>Kettering - (937) 299-2099</li>
-    <li>Bellbrook - (937) 848-0054</li>
-    <li>Centerville - (937) 434-3553</li>
-    <li>Beavercreek - (937) 203-0581</li>
-    <li>Oakwood/Dayton - (937) 299-2071</li>
-      </ul>
     </header>
      <nav id="flex-nav">
 <a href="#" class="toggleNav">&#9776; Menu</a>
