--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 			    <img src="facebook.jpg" alt="Facebook Logo">
 			    <figcaption>Follow Us On Facebook!</figcaption>
 			</figure>
-    </header>
+	    </header>
+	<body>
      <nav id="flex-nav">
 <a href="#" class="toggleNav">&#9776; Menu</a>
 <ul>
@@ -26,6 +27,7 @@
 <li><a href="contact.html">Contact Us</a></li>
 </ul>
 </nav>
+	</body>
 <main>
 <h2> Same Day Service Available! </h2>
 <h2> We have 5 convenient locations to accomodate all your dry cleaning and laundry needs.
