--- a/index.html
+++ b/index.html
@@ -1,6 +1,50 @@
 <!DOCTYPE html>
 <html>
 <head>
+<style>
+nav {
+  grid-area:nav;
+  background:#DA1A1A;
+  text-align:center;
+  font-family:"Impact";
+  float:left;
+}
+    
+nav ul {
+   list-stle-type: none;
+  padding:0;
+  margin:0;
+  display: inline-block;
+	overflow:hidden;
+	background-color:#DA1A1A;
+	
+}
+
+nav li {
+  padding:10px 10px;
+  list-style-type:none;
+  font-size:1.5em;
+  font-weight:bold;
+  display:inline-block;
+	float:left;
+}
+
+nav li a {
+	display:block;
+	color:white;
+	text-align: center;
+	padding:16px;
+  text-decoration:none;
+  float:left;
+  border-right: 2px solid;
+	
+}
+
+li a:hover {
+  color:#001B87;
+}
+</style>
+<head>
 <title> Quality Dry Cleaners</title>
   <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="style.css">
@@ -10,6 +54,7 @@
     <div class="container1"
     <header> 
     <h1>Quality Dry Cleaners</h1>
+	    <br>
     <h3> Pick Up and Delivery Service Available </h3>
       <figure class="fig1">
 			    <img src="facebook.jpg" alt="Facebook Logo">
