--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
      <nav id="flex-nav">
 <a href="#" class="toggleNav">&#9776; Menu</a>
 <ul>
-<li><a href="index.html">Home</a></li>
-<li><a href="service.html">Services</a></li>
-<li><a href="coupon.html">Coupons</a></li>
-<li><a href="contact.html">Contact Us</a></li>
+<li class="first"><a href="index.html">Home</a></li>
+<li class="second"><a href="service.html">Services</a></li>
+<li class="third"><a href="coupon.html">Coupons</a></li>
+<li class="forth"><a href="contact.html">Contact Us</a></li>
 </ul>
 </nav>
 	</body>
