--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
 			</figure>
 	    </header>
 	<body>
+		<div class="wrapper1">
      <nav id="flex-nav">
 <a href="#" class="toggleNav">&#9776; Menu</a>
-<ul>
+<ul id="navwrapper">
 <li class="first"><a href="index.html">Home</a></li>
 <li class="second"><a href="service.html">Services</a></li>
 <li class="third"><a href="coupon.html">Coupons</a></li>
