--- a/index.html
+++ b/index.html
@@ -3,15 +3,10 @@
 <head>
 <title> Quality Dry Cleaners</title>
   <meta charset="utf-8">
+	<meta name="viewport" content="width=device-width,initial-scale=1>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
     </head>
     <body>
-    <div class="container1"
-    <header> 
-    <h1>Quality Dry Cleaners</h1>
-
-    <h3> Pick Up and Delivery Service Available </h3>
       <figure class="fig1">
 			    <img src="facebook.jpg" alt="Facebook Logo">
 			    <figcaption>Follow Us On Facebook!</figcaption>
@@ -19,6 +14,12 @@
 	    </header>
 	<body>
 		<div class="wrapper1">
+<header class="box headerwrapper">
+<img src="facebook.jpg" alt="Facebook Logo">
+<h1><a href="index.html"> Quality Dry Cleaners</a><h1>
+<h4> Pick Up and Delivery Service Available</h4>
+</div>
+</header>
      <nav id="flex-nav">
 <a href="#" class="toggleNav">&#9776; Menu</a>
 <ul id="navwrapper">
