--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
+ <div class="container1">
       <figure class="fig1">
 			    <img src="facebook.jpg" alt="Facebook Logo">
 			    <figcaption>Follow Us On Facebook!</figcaption>
-			</figure>
-	    </header>
-	<body>
-		<div class="wrapper1">
+								       </figure>
+<div class="wrapper1">
 <header class="box headerwrapper">
 <h1><a href="index.html"> Quality Dry Cleaners</a><h1>
 <h4> Pick Up and Delivery Service Available</h4>
@@ -28,7 +27,7 @@
 <li class="forth"><a href="contact.html">Contact Us</a></li>
 </ul>
 </nav>
-	</body>
+	
 <main>
 <h2> Same Day Service Available! </h2>
 <h2> We have 5 convenient locations to accomodate all your dry cleaning and laundry needs.
