--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
      <figure class= "fig1">
-<img src="facebook.jpg" alt="Facebook Logo">
+<img src="facebook.jpg" width="100px" alt="Facebook Logo">
 </figure>							       
 <div class="wrapper1">
 <header class="box headerwrapper">
