--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div class="wrapper1">
 <header class="box headerwrapper">
 <figure class= "fig1">
-<img src="facebook.jpg" width="100px" alt="Facebook Logo">
+<img src="facebook.jpg" width="100px" alt="Facebook Logo"> <figcaption>Follow Us On Facebook!</figcaption>
 </figure>
 <h1><a href="index.html"> Quality Dry Cleaners</a><h1>
 <h4> Pick Up and Delivery Service Available</h4>
