--- a/service.html
+++ b/service.html
@@ -1,1 +1,29 @@
-
+<!DOCTYPE html>
+<html>	
+<head>
+<title> Quality Dry Cleaners</title>
+  <meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<meta name="viewport" content="width=device-width,initial-scale=1>
+    
+    </head>
+    <body>					       
+<div class="wrapper1">
+<header class="box headerwrapper">
+<figure class= "fig1">
+<img src="facebook.jpg" width="100px" alt="Facebook Logo"> <figcaption>Follow Us On Facebook!</figcaption>
+</figure>
+<h1><a href="index.html"> Quality Dry Cleaners</a><h1>
+<h4> Pick Up and Delivery Service Available</h4>
+</div>
+</header>
+     <nav id="flex-nav">
+<a href="#" class="toggleNav">&#9776; Menu</a>
+<ul id="navwrapper">
+<li class="first"><a href="index.html">Home</a></li>
+<li class="second"><a href="service.html">Services</a></li>
+<li class="third"><a href="coupon.html">Coupons</a></li>
+<li class="forth"><a href="contact.html">Contact Us</a></li>
+</ul>
+</nav>
+</html>                                        
