--- a/service.html
+++ b/service.html
@@ -26,4 +26,33 @@
 <li class="forth"><a href="contact.html">Contact Us</a></li>
 </ul>
 </nav>
+<aside>
+<h2> Contact Us Today!</h2>
+<p>Contact Name- Steve Schram, Owner</p>
+  <p> thequalitydrycleaners@gmail.com</p>
+  <ul>
+<li> Kettering <br>1855 E. Stroop Rd.
+Kettering, OH 45429-5056
+<br>937-299-2099</li>
+<li>Bellbrook  <br>112 W. Franklin St.
+Bellbrook, OH 45305
+<br>937-848-0054</li>
+<li>Centerville<br>15 W. Whipp Rd.
+Centerville, OH 45459
+<br>937-434-3553</li>
+<li>Beavercreek<br>1285 N Fairfield Rd.
+Beavercreek, OH 45432
+<br>937-203-0581</li>
+<li>Oakwood/Dayton<br>964 Patterson Rd.
+Dayton, OH 45419
+<br>937-299-2071</li>
+</ul>
+<h2> Business Hours:</h2>
+  <p>Kettering Location Only</p>
+<p>Monday - Friday: 7:00am to 7:00pm
+Saturday: 9:00am to 3:00pm</p>
+  <p>All Other Locations</p>
+<p>Monday - Friday: 7:30am to 7:00pm
+Saturday: 9:00am to 3:00pm</p>
+</aside>
 </html>                                        
