--- a/service.html
+++ b/service.html
@@ -26,6 +26,10 @@
 <li class="forth"><a href="contact.html">Contact Us</a></li>
 </ul>
 </nav>
+					<body>
+					<div class= "wrapper2">
+							      <h3> Dry cleaning for your every need!</h3>
+							      </div>
 <aside>
 <h2> Contact Us Today!</h2>
 <p>Contact Name- Steve Schram, Owner</p>
@@ -55,4 +59,5 @@ Saturday: 9:00am to 3:00pm</p>
 <p>Monday - Friday: 7:30am to 7:00pm
 Saturday: 9:00am to 3:00pm</p>
 </aside>
+					</body>
 </html>                                        
