--- a/index.html
+++ b/index.html
@@ -31,24 +31,29 @@
 <h2> Same Day Service Available! </h2>
 <h2> We have 5 convenient locations to accomodate all your dry cleaning and laundry needs.
   Whether it's your wedding dress or a shirt, Quality Dry Cleaners has you covered!</h2>
-<h2> Dry Cleaning for your entire family!</h2>
-					<p> Your clothing, linens, and upholstery have never been cleaner. We do: </p>
-					<ul>
+					<table border="1"
+							 <tr>
+							 <td> <h2> Dry Cleaning for your entire family!</h2> </td>
+					<td> <p> Your clothing, linens, and upholstery have never been cleaner. We do: </p>
+					<td><ul>
 					<li>Hats / Shirts</li>
 					<li>Rugs / bedding </li>
 					<li>Wedding gowns</li>
 					<li>Clothing repair</li>
 					<li>Clothing alterations</li>
-					</ul>
-					<h2>Keep your linens smelling fresh and clean</h2>
-					<p>When your household linens need refreshing, call Quality Dry Cleaners to the rescue.</p>
-					<ul>
+							 </ul></td>
+							 </tr>
+							 <tr>
+							 <td><h2>Keep your linens smelling fresh and clean</h2></td>
+				<td><p>When your household linens need refreshing, call Quality Dry Cleaners to the rescue.</p></td>
+					<td><ul>
 					<li>Bedspreads</li>
 					<li>Comforters</li>
 					<li>Draperies</li>
 					<li>Tablecloths</li>
 					<li>Pillow cases</li>
-					</ul>
+							 </ul></td>
+							 </tr>
 </main>
 <aside>
 <h2> Contact Us Today!</h2>
