--- a/index.html
+++ b/index.html
@@ -37,17 +37,20 @@
 							 <td><h2>Keep your linens smelling fresh and clean</h2></td>
 							 </tr>
 							 <tr>
-					<td> <p> Your clothing, linens, and upholstery have never been cleaner. We do: </p>
-					<td><p>When your household linens need refreshing, call Quality Dry Cleaners to the rescue.</p></td>
+					<td> <h2> Your clothing, linens, and upholstery have never been cleaner. We do: </h2>
+					<td><h2>When your household linens need refreshing, call Quality Dry Cleaners to the rescue.</h2></td>
 							 </tr>
 							 <tr>
 					<td><ul>
+					<h2>
 					<li>Hats / Shirts</li>
 					<li>Rugs / bedding </li>
 					<li>Wedding gowns</li>
 					<li>Clothing repair</li>
 					<li>Clothing alterations</li>
 							 </ul></td>
+							 </h2>
+					<h2>
 					<td><ul>
 					<li>Bedspreads</li>
 					<li>Comforters</li>
@@ -55,6 +58,7 @@
 					<li>Tablecloths</li>
 					<li>Pillow cases</li>
 							 </ul></td>
+							 </h2>
 							 </tr>
 </main>
 <aside>
