--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 </main>
 <aside>
 <h2> Contact Us Today!</h2>
-<p>Contact Name- Steve Schram, Owner</p>
-  <p> thequalitydrycleaners@gmail.com</p>
+<h2>Contact Name- Steve Schram, Owner</h2>
+  <h2> thequalitydrycleaners@gmail.com</h2>
   <ul>
 <li> Kettering <br>1855 E. Stroop Rd.
 Kettering, OH 45429-5056
@@ -83,12 +83,12 @@ Dayton, OH 45419
 <br>937-299-2071</li>
 </ul>
 <h2> Business Hours:</h2>
-  <p>Kettering Location Only</p>
-<p>Monday - Friday: 7:00am to 7:00pm
-Saturday: 9:00am to 3:00pm</p>
-  <p>All Other Locations</p>
-<p>Monday - Friday: 7:30am to 7:00pm
-Saturday: 9:00am to 3:00pm</p>
+  <h2>Kettering Location Only</h2>
+<h2>Monday - Friday: 7:00am to 7:00pm
+Saturday: 9:00am to 3:00pm</h2>
+  <h2>All Other Locations</h2>
+<h2>Monday - Friday: 7:30am to 7:00pm
+Saturday: 9:00am to 3:00pm</h2>
 </aside>
 </body>
 </html>
