--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
 							 </tr>
 </main>
 <aside>
-<h2> Contact Us Today!</h2>
-<h2>Contact Name- Steve Schram, Owner</h2>
-  <h2> thequalitydrycleaners@gmail.com</h2>
+<p> Contact Us Today!</p>
+<p>Contact Name- Steve Schram, Owner</p>
+  <p> thequalitydrycleaners@gmail.com</p>
   <ul>
-<h2>
+<p>
 <li> Kettering <br>1855 E. Stroop Rd.
 Kettering, OH 45429-5056
 <br>937-299-2099</li>
@@ -82,15 +82,15 @@ Beavercreek, OH 45432
 <li>Oakwood/Dayton<br>964 Patterson Rd.
 Dayton, OH 45419
 <br>937-299-2071</li>
-</h2>
+</p>
 </ul>
-<h2> Business Hours:</h2>
-  <h2>Kettering Location Only</h2>
-<h2>Monday - Friday: 7:00am to 7:00pm
+<p> Business Hours:</p>
+  <p>Kettering Location Only</p>
+<p>Monday - Friday: 7:00am to 7:00pm
 <br>
-Saturday: 9:00am to 3:00pm</h2>
+Saturday: 9:00am to 3:00pm</p>
 <br>
-  <h2>All Other Locations</h2>
+  <p>All Other Locations</p>
 <h2>Monday - Friday: 7:30am to 7:00pm
 <br>
 Saturday: 9:00am to 3:00pm</h2>
