--- a/index.html
+++ b/index.html
@@ -1,100 +1,151 @@
 <!DOCTYPE html>
-<html>	
-<head>
-<title> Quality Dry Cleaners</title>
-  <meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="style.css">
-	<meta name="viewport" content="width=device-width,initial-scale=1>
-    
-    </head>
-    <body>					       
-<div class="wrapper1">
-<header class="box headerwrapper">
-<figure class= "fig1">
-<img src="facebook.jpg" width="100px" alt="Facebook Logo"> <figcaption>Follow Us On Facebook!</figcaption>
-</figure>
-<h1><a href="index.html"> Quality Dry Cleaners</a><h1>
-<h4> Pick Up and Delivery Service Available</h4>
-</div>
-</header>
-     <nav id="flex-nav">
-<a href="#" class="toggleNav">&#9776; Menu</a>
-<ul id="navwrapper">
-<li class="first"><a href="index.html">Home</a></li>
-<li class="second"><a href="service.html">Services</a></li>
-<li class="third"><a href="coupon.html">Coupons</a></li>
-<li class="forth"><a href="contact.html">Contact Us</a></li>
-</ul>
-</nav>
-	
-<main>
-<h2> Same Day Service Available! </h2>
-<h2> We have 5 convenient locations to accomodate all your dry cleaning and laundry needs.
-  Whether it's your wedding dress or a shirt, Quality Dry Cleaners has you covered!</h2>
-					<table border="1"
-							 <tr>
-							 <td> <h2> Dry Cleaning for your entire family!</h2> </td>
-							 <td><h2>Keep your linens smelling fresh and clean</h2></td>
-							 </tr>
-							 <tr>
-					<td> <h2> Your clothing, linens, and upholstery have never been cleaner. We do: </h2>
-					<td><h2>When your household linens need refreshing, call Quality Dry Cleaners to the rescue.</h2></td>
-							 </tr>
-							 <tr>
-					<td><ul>
-					<h2>
-					<li>Hats / Shirts</li>
-					<li>Rugs / bedding </li>
-					<li>Wedding gowns</li>
-					<li>Clothing repair</li>
-					<li>Clothing alterations</li>
-							 </ul></td>
-							 </h2>
-					<td><ul>
-					<h2>
-					<li>Bedspreads</li>
-					<li>Comforters</li>
-					<li>Draperies</li>
-					<li>Tablecloths</li>
-					<li>Pillow cases</li>
-							 </ul></td>
-							 </h2>
-							 </tr>
-</main>
-<aside>
-<p> Contact Us Today!</p>
-<p>Contact Name- Steve Schram, Owner</p>
-  <p> thequalitydrycleaners@gmail.com</p>
-  <ul>
-<p>
-<li> Kettering <br>1855 E. Stroop Rd.
-Kettering, OH 45429-5056
-<br>937-299-2099</li>
-<li>Bellbrook  <br>112 W. Franklin St.
-Bellbrook, OH 45305
-<br>937-848-0054</li>
-<li>Centerville<br>15 W. Whipp Rd.
-Centerville, OH 45459
-<br>937-434-3553</li>
-<li>Beavercreek<br>1285 N Fairfield Rd.
-Beavercreek, OH 45432
-<br>937-203-0581</li>
-<li>Oakwood/Dayton<br>964 Patterson Rd.
-Dayton, OH 45419
-<br>937-299-2071</li>
-</p>
-</ul>
-<p> Business Hours:</p>
-  <p>Kettering Location Only</p>
-<p>Monday - Friday: 7:00am to 7:00pm
-<br>
-Saturday: 9:00am to 3:00pm</p>
-<br>
-  <p>All Other Locations</p>
-<h2>Monday - Friday: 7:30am to 7:00pm
-<br>
-Saturday: 9:00am to 3:00pm</h2>
-<br>
-</aside>
+<html lang="en">
+  <head>
+    <title>Quality Dry Cleaners</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="code.js"></script>
+    <link rel="icon" href="favicon.ico">
+</head>
+ <body>
+ <div class="wrapper1">
+        <nav id="flex-nav">
+            <a href="#" class="toggleNav">☰ Menu</a> <!--This will only be visible less than 480px wide-->
+        <ul id="navwrapper">
+        <li class="first"><a href="index.html">Home</a></li>
+        <li class="second"><a href="services.html">Services</a></li>
+        <li class="third"><a href="coupons.html">Coupons</a></li>
+        <li class="fourth"><a href="contact.html">Contact Us</a></li>
+       </ul>
+  </nav>
+    <header class="box headerwrapper">
+      <div class="headerpic">
+        <a href=" index.html"> <img class="logo" src="logo.png" alt="logo"> </a>
+      </div>
+      <div class="headertext">
+        <h4> Pick up and delivery service available</h4>
+        <h4> (937)848-0054 </h4>
+      </div>
+      <div class="social">
+        <div id="content-desktop">  
+            <ul>
+              <li>Kettering - 937-299-2099</li>
+              <li>Bellbrook - 937-848-0054</li>
+              <li>Centerville - 937-434-3553</li>
+              <li>Beavercreek - 937-203-0581</li>
+              <li>Dayton - 937-299-2071</li>
+            </ul>
+          <figure2>
+      <a target="blank" href="https://www.facebook.com/qualitydrycleaners/"> 
+        <img class="facebook" src="facebook.jpg" alt="Facebook">
+      </a>
+          <figcaption> Follow us on<br>Facebook!</figcaption>
+          <figcaption>   Follow us on<br>  Facebook!</figcaption>
+          </figure2>
+          </div>
+        <img class="bbb" src="bbb.PNG" alt="BBB">
+        <br>
+        <br>
+         <div id="content-mobile">
+      <a target="blank" href="https://www.facebook.com/qualitydrycleaners/"> 
+        <img class="facebook" src="facebook.jpg" alt="Facebook">
+      </a>
+          </div>
+          </div>
+      
+    </header>
+  <main class="box mainaside"><h2>Same day service available!</h2>We have 5 convienient locations to accomodate all your
+    dry cleaning and laundry needs
+    <p>Whether it's your wedding dress or shirt, Quality Dry Cleaners has you covered.</p>
+   <img class="store4" src="store4.JPG" alt="clothes">
+   <p class="nestedgrid">
+      <div class="div1">
+        <p>Dry Cleaning services for the entire family</p>
+        <p>Your clothing, linens, and upholstery have never been cleaner. We do: </p>
+        <ul>
+        <li>Hats / Shirts</li>
+        <li>Rugs / bedding</li>
+        <li>Wedding gowns</li>
+        <li>Clothing repair</li>
+        <li>Clothing alterations</li>
+        </ul>
+        <img class="dress" src="dresses.jpg" alt="dresses">
+   </div>
+        <div class="div2">
+          <p> Professional cleaning service to preserve your wedding gown</p>
+          <p>Your wedding gown is serviced better by our services</p>
+<ul>
+  <li>Stain removal</li>
+  <li>Gown alterations</li>
+  <li>Gown preservation</li>
+  <li>Used gown refreshing</li>
+  <li>Wedding gown dry cleaning</li>
+          </ul>
+        </div>
+   <div class="div3">
+     <p>Keep your linens smelling fresh and clean</p>
+     <p>When your household linens need refreshing, call Quality Dry Cleaners to the rescue. </p>
+     <ul>
+     <li>Bedspreads</li>
+     <li>Comforters</li>
+     <li>Draperies</li>
+     <li>Tablecloths</li>
+     <li>Pillow cases</li>
+     </ul>
+   </div>
+        <div class="div4">
+          <p>Experience excellence in rug cleaning for your satisfaction</p>
+          <p>When your area rugs are looking dingy, bring them in for a thorough cleaning!</p>
+<ul>
+  <li>Area rugs</li>
+  <li>Small rugs</li>
+  <li>Large rugs</li>
+  <li>Outdoor rugs</li>
+  <li>Specialized rugs</li>
+          </ul>
+        </div>
+  </main>
+  <aside class="box">
+    <h2>Contact Us Today</h2>
+    <h4>Contact Name Steve Schram, Owner </h4>
+    <p>thequalitydrycleaners@gmail.com</p>
+    <p>1855 E. Stroop Rd.<br>
+       Kettering, OH 45429-5056<br>
+       937-299-2099</p>
+    <p>112 W. Franklin St.<br>
+       Bellbrook, OH 45305<br>
+       937-848-0054</p>
+    <p>15 W. Whipp Rd.<br>
+       Centerville, OH 45459<br>
+       937-434-3553</p>
+    <p>1285 N Fairfield Rd.<br>
+       Beavercreek, OH 45432<br>
+       937-203-0581</p>
+    <p>964 Patterson Rd.<br>
+       Dayton, OH 45419<br>
+       937-299-2071</p>
+    <p>Business Hours:</p>
+    <p>Kettering Location Only<br>
+       Monday - Friday: 7:00am to 7:00pm<br>
+       Saturday: 9:00am to 3:00pm</p>
+    <p>All Other Locations<br>
+       Monday - Friday: 7:30am to 7:00pm<br>
+       Saturday: 9:00am to 3:00pm</p>
+    <br>
+    <br>
+    <div id="slider">
+            <figure>
+                <img src="store1.JPG" alt="pic">
+                <img src="store2.JPG" alt="pic">
+                <img src="store3.jpg" alt="pic">
+                <img src="store5.JPG" alt="pic">
+                <img src="store6.jpg" alt="pic">
+            </figure>
+        </div>
+  </aside>
+  <footer class="box">&copy; 2020</footer>
+  </div>
 </body>
 </html>
